--- a/data-engineering/tp-kafka-api/kafka-connect-configs/connect-file-sink.properties
+++ b/data-engineering/tp-kafka-api/kafka-connect-configs/connect-file-sink.properties
@@ -26,8 +26,8 @@ tasks.max=1
 file=test.sink.txt
 
 # Comma separate input topic list
-topics=mytopics
+topics=news
 
-# TODO
+#TODO
 key.converter=org.apache.kafka.connect.storage.StringConverter
 value.converter=org.apache.kafka.connect.storage.StringConverter
